--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Shayk-N'-Bake
 description: Online Person
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/avatar_shayk.png
 
 #
 # Flags below are optional
