--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: Online Person
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-avatar: images/avatar_shayk.png
+avatar: https://shaykbake.github.io/blog/images/avatar_shayk.png
 
 #
 # Flags below are optional
